--- a/style.css
+++ b/style.css
@@ -1,10 +1,207 @@
-div.col-lg{
+
+h1{
+  font-size: 50px;
+  color: rgb(255, 255, 255);
+  font-family: 'Sriracha', cursive;
+  text-align:center;
+}
+h2{
+  font-size: 22px;
+  color: rgb(52, 65, 121);
+  font-family: 'Sriracha', cursive;
+  text-align:center;
+}
+.choose {
+    display:inline-block;
+    margin: 0px auto;
+    margin-top: 0px;
+}
+@media (min-width: 400px){
+.homequiz {
+    
+    background-image: url("Full-Design/testbackquiz.jpg");
+}
+}
+.home {
+    margin: 0px auto;
+    position: relative;
+    margin-top: 0px;
+}
+.img-fluid {
+    border: 0px;
     padding: 0%;
+    /* Some padding */
+}
+@media (min-width: 400px){
+  .container-fluid{
+
+  }
 }
 
-img.img-thumbnail{
-    padding: 0%;
+* {
+    position: relative;
+  }
+  
+  .frame {
+    width: 500px;
+    height: auto;
+    margin: 15% auto 0;
+    position: absolute;
+    width: 100%;
+  }
+  #posit{
+    border: 0px;
+    margin-top: -53%;
+  }
+  #vert-move {
+    -webkit-animation: mover 1s infinite  alternate;
+    animation: mover 1s infinite  alternate;
 }
-label{
-    cursor: pointer;
+  #vert-move {
+    -webkit-animation: mover 1s infinite  alternate;
+    animation: mover 1s infinite  alternate;
 }
+@-webkit-keyframes mover {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-10px); }
+}
+@keyframes mover {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-100px); }
+}
+
+ 
+  /**
+   * Clouds
+   */
+  .clouds {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+    transform: translateZ(0);
+  }
+  
+  .cloud {
+    position: absolute;
+    top: 20%;
+    width: 300px;
+    right: 0;
+    opacity: 1;
+  }
+  
+  .cloud.front {
+    z-index: 9;
+  }
+  
+  .cloud.distant {
+    z-index: 1;
+  }
+  
+  .cloud.background {
+    z-index: 1;
+  }
+  
+  /*Cloud Sizing*/
+  .cloud.smaller {
+    margin-right: 400px;
+    width: 100px;
+    margin-top: 50px;
+  }
+  
+  .cloud.small {
+    margin-right: 200px;
+    width: 150px;
+  }
+  
+  .cloud.big {
+    width: 500px;
+    margin-top: 50px;
+    margin-right: 150px;
+  }
+  
+  .cloud.massive {
+    width: 600px;
+    margin-top: 20px;
+    margin-right: 0px;
+  }
+  
+  
+  /*Cloud: Animation*/
+  .cloud {
+    -webkit-animation-name: cloud-movement;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-direction: forwards;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-duration: 8s;
+  
+    -moz-animation-name: cloud-movement;
+    -moz-animation-timing-function: linear;
+    -moz-animation-direction: forwards;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-duration: 8s;
+  
+    animation-name: cloud-movement;
+    animation-timing-function: linear;
+    animation-direction: forwards;
+    animation-iteration-count: infinite;
+    animation-duration: 8s;
+  }
+  
+  .slow {
+    -webkit-animation-duration: 9.2s;
+    -moz-animation-duration: 9.2s;
+    animation-duration: 9.2s;
+  }
+  
+  .slower {
+    -webkit-animation-duration: 11.2s;
+    -moz-animation-duration: 11.2s;
+    animation-duration: 11.2s;
+  }
+  
+  .slowest {
+    -webkit-animation-duration: 13.5s;
+    -moz-animation-duration: 13.5s;
+    animation-duration: 13.5s;
+  }
+  
+  .super-slow {
+    -webkit-animation-duration: 20.5s;
+    -moz-animation-duration: 20.5s;
+    animation-duration: 20.5s;
+  }
+  
+  @-webkit-keyframes cloud-movement {
+    0% {
+      opacity: 0.1;
+      -webkit-transform: translateX(300px);
+      -moz-transform: translateX(300px);
+      transform: translateX(300px);
+    }
+    10% {
+  
+      opacity: 0.7;
+    }
+    90% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 0;
+      -webkit-transform: translateX(-1000px);
+      -moz-transform: translateX(-1000px);
+      transform: translateX(-1000px);
+    }
+  }
+  @media (min-width: 300px){
+.col-sm {
+    -ms-flex-preferred-size: 0;
+    flex-basis: 0;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    max-width: 100%;
+    margin-top: -42%;
+}
+  }
