--- a/EgyptHTML/osirisstyle.css
+++ b/EgyptHTML/osirisstyle.css
@@ -11,13 +11,13 @@ body {
 h1 {
     font-size: 50px;
     color: rgb(255, 255, 255);
-    font-family: 'Sriracha', cursive;
+    font-family: 'Chakra Petch', sans-serif;
     text-align: center;
 }
 
 b {
     color: #f5a270;
-    font-family: 'Sriracha', cursive;
+    font-family: 'Chakra Petch', sans-serif;
     margin-left: 2%;
     font-size: 144%;
 }
@@ -25,13 +25,13 @@ b {
 .bold1 {
     font-size: 144%;
     color: #d77aff;
-    font-family: 'Sriracha', cursive;
+    font-family: 'Chakra Petch', sans-serif;
 }
 
 .bold2 {
     font-size: 144%;
     color: #8d230e;
-    font-family: 'Sriracha', cursive;
+    font-family: 'Chakra Petch', sans-serif;
     text-align: center;
 }
 
@@ -250,7 +250,7 @@ b {
         margin-top: -57.4%;
         height: 70%;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 3px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -269,7 +269,7 @@ b {
         margin-top: -55.6%;
         height: 70%;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 3.8px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -288,7 +288,7 @@ b {
         margin-top: -54.8%;
         height: 70%;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 4.2px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -307,7 +307,7 @@ b {
         margin-top: -55.7%;
         height: 70%;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 5px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -326,7 +326,7 @@ b {
         margin-top: -56.4%;
         height: 70%;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 7px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -345,7 +345,7 @@ b {
         margin-top: -56%;
         height: 70%;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 8px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -364,7 +364,7 @@ b {
         margin-top: -56.15%;
         height: 70%;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 9.6px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -383,7 +383,7 @@ b {
         margin-top: -56.6%;
         height: 70%;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 12px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -402,7 +402,7 @@ b {
         margin-top: -56.4%;
         height: 70%;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 14.7px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -421,7 +421,7 @@ b {
         margin-top: -56%;
         height: 70%;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 17px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -440,7 +440,7 @@ b {
         margin-top: -56.3%;
         height: 70%;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 19.7px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -459,7 +459,7 @@ b {
         margin-top: -56.1%;
         height: 70%;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 23px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -475,7 +475,7 @@ b {
 }
 
 p {
-    font-family: 'Sriracha', cursive;
+    font-family: 'Chakra Petch', sans-serif;
     margin-left: 2.4%;
     margin-right: 2.4%;
     padding: 2.4%;
@@ -490,7 +490,7 @@ p {
         max-width: 100%;
         margin-top: -40%;
         margin-left: 4%;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 3px;
         color: #402528;
         background-color: #bd665d;
@@ -512,7 +512,7 @@ p {
         height: 65px;
         width: 110px;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 3.8px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -535,7 +535,7 @@ p {
         height: 86px;
         width: 120px;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 4.2px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -558,7 +558,7 @@ p {
         height: 96px;
         width: 150px;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 5px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -581,7 +581,7 @@ p {
         height: 137px;
         width: 212px;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 7px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -604,7 +604,7 @@ p {
         height: 160px;
         width: 240px;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 8px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -627,7 +627,7 @@ p {
         height: 184px;
         width: 300px;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 9.6px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -650,7 +650,7 @@ p {
         height: 212px;
         width: 352px;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 12px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -673,7 +673,7 @@ p {
         height: 300px;
         width: 440px;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 14.7px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -696,7 +696,7 @@ p {
         height: 340px;
         width: 499px;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 17px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -719,7 +719,7 @@ p {
         height: 410px;
         width: 560px;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 19.7px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -742,7 +742,7 @@ p {
         height: 450px;
         width: 675px;
         color: rgb(255, 255, 255);
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 23px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -763,7 +763,7 @@ p {
         max-width: 100%;
         margin-top: -70%;
         margin-left: 1%;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 3.8px;
         color: #402528;
         background-color: #bd665d;
@@ -787,7 +787,7 @@ p {
         height: 45px;
         width: 275px;
         color: #7a3941;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 4.2px;
         margin-left: 1.8%;
         margin-right: 1.8%;
@@ -810,7 +810,7 @@ p {
         height: 48px;
         width: 310px;
         color: #7a3941;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 4.4px;
         margin-left: 2%;
         margin-right: 2%;
@@ -833,7 +833,7 @@ p {
         height: 48px;
         width: 360px;
         color: #7a3941;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 5px;
         margin-left: 2%;
         margin-right: 2%;
@@ -856,7 +856,7 @@ p {
         height: 80px;
         width: 470px;
         color: #7a3941;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 7px;
         margin-left: 2%;
         margin-right: 2%;
@@ -879,7 +879,7 @@ p {
         height: 80px;
         width: 570px;
         color: #7a3941;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 8px;
         margin-left: 2%;
         margin-right: 2%;
@@ -902,7 +902,7 @@ p {
         height: 110px;
         width: 680px;
         color: #7a3941;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 9.6px;
         margin-left: 2%;
         margin-right: 2%;
@@ -925,7 +925,7 @@ p {
         height: 135px;
         width: 800px;
         color: #7a3941;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 12px;
         margin-left: 2%;
         margin-right: 2%;
@@ -948,7 +948,7 @@ p {
         height: 165px;
         width: 980px;
         color: #7a3941;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 14.7px;
         margin-left: 2%;
         margin-right: 2%;
@@ -971,7 +971,7 @@ p {
         height: 178px;
         width: 1250px;
         color: #7a3941;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 17.5px;
         margin-left: 2%;
         margin-right: 2%;
@@ -994,7 +994,7 @@ p {
         height: 205px;
         width: 1440px;
         color: #7a3941;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 19.7px;
         margin-left: 2%;
         margin-right: 2%;
@@ -1018,7 +1018,7 @@ p {
         height: 250px;
         width: 1790px;
         color: #7a3941;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 23px;
         margin-left: 2%;
         margin-right: 2%;
@@ -1039,7 +1039,7 @@ p {
         max-width: 100%;
         margin-top: -70%;
         margin-left: 6%;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 3.8px;
         color: #d14f1e;
         border-radius: 8px;
@@ -1062,7 +1062,7 @@ p {
         height: 40px;
         width: 120px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 4.2px;
         margin-left: 6%;
         margin-right: 6%;
@@ -1083,7 +1083,7 @@ p {
         height: 40px;
         width: 131px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 4.4px;
         margin-left: 6%;
         margin-right: 6%;
@@ -1104,7 +1104,7 @@ p {
         height: 50px;
         width: 152px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 5.2px;
         margin-left: 6%;
         margin-right: 6%;
@@ -1125,7 +1125,7 @@ p {
         height: 70px;
         width: 200px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 7px;
         margin-left: 6%;
         margin-right: 6%;
@@ -1146,7 +1146,7 @@ p {
         height: 90px;
         width: 240px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 8.3px;
         margin-left: 6%;
         margin-right: 6%;
@@ -1167,7 +1167,7 @@ p {
         height: 100px;
         width: 285px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 9.8px;
         margin-left: 6%;
         margin-right: 6%;
@@ -1188,7 +1188,7 @@ p {
         height: 120px;
         width: 350px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 12px;
         margin-left: 6%;
         margin-right: 6%;
@@ -1209,7 +1209,7 @@ p {
         height: 150px;
         width: 393px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 14.8px;
         margin-left: 6%;
         margin-right: 6%;
@@ -1230,7 +1230,7 @@ p {
         height: 185px;
         width: 500px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 17.5px;
         margin-left: 6%;
         margin-right: 6%;
@@ -1251,7 +1251,7 @@ p {
         height: 210px;
         width: 570px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 19.7px;
         margin-left: 6%;
         margin-right: 6%;
@@ -1272,7 +1272,7 @@ p {
         height: 240px;
         width: 690px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 23.4px;
         margin-left: 6%;
         margin-right: 6%;
@@ -1292,7 +1292,7 @@ p {
         margin-top: -64.5%;
         margin-left: 59%;
         margin-right: 59%;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 3.8px;
         color: #d14f1e;
         border-radius: 8px;
@@ -1311,11 +1311,11 @@ p {
         -ms-flex-positive: 1;
         flex-grow: 1;
         max-width: 100%;
-        margin-top: -58%;
+        margin-top: -56.35%;
         height: 40px;
         width: 120px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 4.2px;
         margin-left: 59%;
         margin-right: 59%;
@@ -1332,11 +1332,11 @@ p {
         -ms-flex-positive: 1;
         flex-grow: 1;
         max-width: 100%;
-        margin-top: -58%;
+        margin-top: -56%;
         height: 40px;
         width: 131px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 4.4px;
         margin-left: 59%;
         margin-right: 59%;
@@ -1353,11 +1353,11 @@ p {
         -ms-flex-positive: 1;
         flex-grow: 1;
         max-width: 100%;
-        margin-top: -58%;
+        margin-top: -56.5%;
         height: 50px;
         width: 152px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 5.2px;
         margin-left: 59%;
         margin-right: 59%;
@@ -1374,11 +1374,11 @@ p {
         -ms-flex-positive: 1;
         flex-grow: 1;
         max-width: 100%;
-        margin-top: -58%;
+        margin-top: -56.6%;
         height: 70px;
         width: 200px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 7px;
         margin-left: 59%;
         margin-right: 59%;
@@ -1395,11 +1395,11 @@ p {
         -ms-flex-positive: 1;
         flex-grow: 1;
         max-width: 100%;
-        margin-top: -58%;
+        margin-top: -56.8%;
         height: 90px;
         width: 240px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 8.3px;
         margin-left: 59%;
         margin-right: 59%;
@@ -1416,11 +1416,11 @@ p {
         -ms-flex-positive: 1;
         flex-grow: 1;
         max-width: 100%;
-        margin-top: -58%;
+        margin-top: -57%;
         height: 100px;
         width: 285px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 9.8px;
         margin-left: 59%;
         margin-right: 59%;
@@ -1437,11 +1437,11 @@ p {
         -ms-flex-positive: 1;
         flex-grow: 1;
         max-width: 100%;
-        margin-top: -58%;
+        margin-top: -57%;
         height: 120px;
         width: 350px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 12px;
         margin-left: 59%;
         margin-right: 59%;
@@ -1458,11 +1458,11 @@ p {
         -ms-flex-positive: 1;
         flex-grow: 1;
         max-width: 100%;
-        margin-top: -58%;
+        margin-top: -57%;
         height: 150px;
         width: 427px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 14.8px;
         margin-left: 59%;
         margin-right: 59%;
@@ -1479,11 +1479,11 @@ p {
         -ms-flex-positive: 1;
         flex-grow: 1;
         max-width: 100%;
-        margin-top: -58%;
+        margin-top: -57%;
         height: 185px;
         width: 500px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 17.5px;
         margin-left: 59%;
         margin-right: 59%;
@@ -1500,11 +1500,11 @@ p {
         -ms-flex-positive: 1;
         flex-grow: 1;
         max-width: 100%;
-        margin-top: -58%;
+        margin-top: -56.5%;
         height: 210px;
         width: 570px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 19.7px;
         margin-left: 59%;
         margin-right: 59%;
@@ -1521,11 +1521,11 @@ p {
         -ms-flex-positive: 1;
         flex-grow: 1;
         max-width: 100%;
-        margin-top: -58%;
+        margin-top: -56.5%;
         height: 240px;
         width: 690px;
         color: #d14f1e;
-        font-family: 'Sriracha', cursive;
+        font-family: 'Chakra Petch', sans-serif;
         font-size: 23.4px;
         margin-left: 59%;
         margin-right: 59%;
