--- a/Quiz/quiz.css
+++ b/Quiz/quiz.css
@@ -33,7 +33,7 @@ img{
   }
   
   #quiz {
-    background-color: #34495E;
+    background-color: #a78131;
     padding-bottom: 60px;
     width: 100%;
     height: 100%;
@@ -53,8 +53,8 @@ img{
     font-size: 28px;
     font-weight: 500;
     font-style: italic;
-    border-top: 1px solid #FFFFFF;
-    border-bottom: 1px solid #FFFFFF;
+    border-top: 2px solid  rgb(226, 187, 161);
+    border-bottom: 2px solid  rgb(105, 42, 0);
     padding: 20px;
   }
   
@@ -80,7 +80,7 @@ img{
     width: 50%;
     margin: 0 auto;
     padding-bottom: 15px;
-    border-top: 1px solid grey;
+    border-top: 1px solid rgb(105, 42, 0);
   }
   
   .answers div:first-child {
@@ -348,32 +348,32 @@ img{
                                 @media (min-width: 1366px){
                                     .wrapper {
                                         width: 50%;
-                                        height: 41%;
+                                        height: 49%;
                                         margin-left: 23%;
-                                        margin-top: -52%;
+                                        margin-top: -45%;
                                         }
                                         #quiz > h1 {
-                                            font-size: 31px;
+                                            font-size: 39px;
                                             padding-top: 5px;
                                         }
                                         .questions {
-                                            font-size: 21px;
+                                            font-size: 24px;
                                             padding: 8px;
                                          }
                                          .answers div {
-                                            font-size: 18px;
+                                            font-size: 22px;
                                             padding: 6px;
                                         }
                                         .answers{
                                             margin-top: -3%;
                                         }
                                         h3{
-                                            font-size: 21px;
+                                            font-size: 24px;
                                             margin-top: 10%;
                                         }
                                         .correct,.false{
                                             font-size: 100%;
-                                            line-height: 35px;
+                                            line-height: 45px;
                                         }
                                          }
 
