--- a/Quiz/quiz2.css
+++ b/Quiz/quiz2.css
@@ -33,12 +33,12 @@ img{
   }
   
   #quiz {
-    background-color: #a78131;
+    background-color: #e97373;
     padding-bottom: 60px;
     width: 100%;
     height: 100%;
     border-radius: 2%;
-    color: #5e3200;
+    color: #810606;
     text-align: center;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     border-color: #975527;
@@ -54,16 +54,16 @@ img{
     font-size: 28px;
     font-weight: 500;
     font-style: italic;
-    border-top: 2px solid #975527;
-    border-bottom: 2px solid  #975527;
+    border-top: 2px solid #a11a1a;
+    border-bottom: 2px solid  #a11a1a;
     padding: 20px;
-    color: #753b12;
+    color: #a11a1a;
   }
   
   .answers div {
     padding: 10px 0 0 0;
     font-size: 16px;
-    color: #753b12;
+    color: #a11a1a;
   }
   
   .answers div:hover {
@@ -83,7 +83,7 @@ img{
     width: 50%;
     margin: 0 auto;
     padding-bottom: 15px;
-    border-top: 1px solid #975527;
+    border-top: 1px solid #a11a1a;
   }
   
   .answers div:first-child {
@@ -99,7 +99,7 @@ img{
   
   .correct, .false {
     background-color: #109D59;
-    width: 19.6%;
+    width: 16%;
     height: 100%;
     line-height: 14px;
     font-size: 6;
@@ -116,9 +116,8 @@ img{
   @media (min-width: 320px){
     .wrapper {
     width: 50%;
-    height: 18%;
+    height: 12%;
     margin-left: 23%;
-    margin-top: -56%;
     }
     #quiz > h1 {
         font-size: 7px;
@@ -138,17 +137,14 @@ img{
     h3{
         font-size: 7px;
         margin-top: 10%;
-        color: #e6ba88;
+        color: #5e2626;
     }
-    .correct, .false {
-        width: 18.2%;
      }
      @media (min-width: 360px){
         .wrapper {
             width: 50%;
-            height: 19%;
+            height: 13%;
             margin-left: 23%;
-            margin-top: -56%;
             }
             #quiz > h1 {
                 font-size: 12px;
@@ -173,17 +169,17 @@ img{
          @media (min-width: 375px){
             .wrapper {
                 width: 50%;
-                height: 20%;
+                height: 15%;
                 margin-left: 23%;
-                margin-top: -57%;
+                margin-top: -52%;
                 }
                 #quiz > h1 {
                     font-size: 13px;
                     padding-top: 5px;
                 }
                 .questions {
-                    font-size: 8px;
-                    padding: 6px;
+                    font-size: 9px;
+                    padding: 8px;
                  }
                  .answers div {
                     font-size: 7px;
@@ -201,9 +197,9 @@ img{
              @media (min-width: 530px){
                 .wrapper {
                     width: 50%;
-                    height: 30%;
+                    height: 20%;
                     margin-left: 23%;
-                    margin-top: -54%;
+                    margin-top: -52%;
                     }
                     #quiz > h1 {
                         font-size: 15px;
@@ -229,7 +225,7 @@ img{
                  @media (min-width: 640px){
                     .wrapper {
                         width: 50%;
-                        height: 35%;
+                        height: 21%;
                         margin-left: 23%;
                         margin-top: -52%;
                         }
@@ -255,7 +251,6 @@ img{
                         .correct,.false{
                             font-size: 70%;
                             line-height: 16px;
-                            width: 19.2%;
                         }
                          }
 
@@ -357,9 +352,9 @@ img{
                                 @media (min-width: 1366px){
                                     .wrapper {
                                         width: 50%;
-                                        height: 65%;
+                                        height: 49%;
                                         margin-left: 23%;
-                                        margin-top: -50%;
+                                        margin-top: -45%;
                                         }
                                         #quiz > h1 {
                                             font-size: 39px;
@@ -389,9 +384,9 @@ img{
                                     @media (min-width: 1540px){
                                         .wrapper {
                                             width: 50%;
-                                            height: 45%;
+                                            height: 54%;
                                             margin-left: 23%;
-                                            margin-top: -50%;
+                                            margin-top: -45%;
                                             }
                                             #quiz > h1 {
                                                 font-size: 39px;
