--- a/Quiz/quiz.css
+++ b/Quiz/quiz.css
@@ -448,5 +448,17 @@ img{
                                                     line-height: 60px;
                                                 }
                                                  }
-            
+                                                 .indexpic{
+                                                    position: absolute;
+                                                    z-index: 15;
+                                                    display: inline;
+                                                    padding-left: 90%;
+                                                  }
+                                                  .img-fluid {
+                                                    border: 0px;
+                                                    padding: 0%;
+                                                    margin-top: -1px;
+                                                    z-index: 16;
+                                                    /* Some padding */
+                                                }
         
