--- a/Quiz/quiz3.css
+++ b/Quiz/quiz3.css
@@ -444,4 +444,16 @@ img{
                                                 }
                                                  }
             
-        
+                                                 .indexpic{
+                                                    position: absolute;
+                                                    z-index: 15;
+                                                    display: inline;
+                                                    padding-left: 90%;
+                                                  }
+                                                  .img-fluid {
+                                                    border: 0px;
+                                                    padding: 0%;
+                                                    margin-top: -1px;
+                                                    z-index: 16;
+                                                    /* Some padding */
+                                                }
