--- a/style.css
+++ b/style.css
@@ -933,6 +933,7 @@ width: 890px;
         flex-grow: 1;
         max-width: 100%;
         margin-top: -42%;
+        z-index: 7;
     }
       }
   @media(min-width :320px){
