--- a/style.css
+++ b/style.css
@@ -948,9 +948,9 @@ width: 890px;
     }
     #belowP {
       margin-top: -23%;
-      margin-left: -45%;
-      padding-right: 11px;
-      
+      margin-left: -33%;
+    padding-right: 64px;
+    padding-left: 33px;
     }
     .topic-text{
         font-size: 13px;
@@ -977,8 +977,9 @@ width: 890px;
     }
     #belowP {
       margin-top: -23%;
-      margin-left: -45%;
-      padding-right: 11px;
+      margin-left: -33%;
+    padding-right: 64px;
+    padding-left: 33px;
     }
     .topic-text{
         font-size: 13px;
@@ -1004,8 +1005,9 @@ width: 890px;
     }
     #belowP {
       margin-top: -23%;
-      margin-left: -45%;
-      padding-right: 11px;
+      margin-left: -33%;
+    padding-right: 64px;
+    padding-left: 33px;
     }
     .topic-text{
         font-size: 13px;
@@ -1031,8 +1033,9 @@ width: 890px;
     }
     #belowP {
       margin-top: -23%;
-      margin-left: -45%;
-      padding-right: 11px;
+      margin-left: -33%;
+    padding-right: 64px;
+    padding-left: 43px;
     }
     .topic-text{
         font-size: 15px;
@@ -1058,8 +1061,9 @@ width: 890px;
     }
     #belowP {
       margin-top: -23%;
-      margin-left: -45%;
-      padding-right: 11px;
+      margin-left: -33%;
+    padding-right: 64px;
+    padding-left: 33px;
     }
     .topic-text{
         font-size: 22px;
@@ -1085,8 +1089,9 @@ width: 890px;
     }
     #belowP {
       margin-top: -23%;
-      margin-left: -45%;
-      padding-right: 11px;
+      margin-left: -33%;
+    padding-right: 64px;
+    padding-left: 53px;
     }
     .topic-text{
         font-size: 28px;
@@ -1112,8 +1117,9 @@ width: 890px;
     }
     #belowP {
       margin-top: -23%;
-      margin-left: -45%;
-      padding-right: 11px;
+      margin-left: -33%;
+    padding-right: 64px;
+    padding-left: 73px;
     }
     .topic-text{
         font-size: 37px;
