--- a/EgyptHTML/Amun.css
+++ b/EgyptHTML/Amun.css
@@ -10,6 +10,69 @@ body {
     font-family: 'Chakra Petch', sans-serif;
 }
 
+@media (min-width: 310px) {
+    .navbar-expand-sm .navbar-nav {
+        -ms-flex-direction: row;
+        flex-direction: row;
+    }
+}
+
+@media (min-width: 310px) {
+    .navbar-expand-sm {
+        -ms-flex-flow: row nowrap;
+        flex-flow: row nowrap;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+    }
+}
+
+@media (min-width: 310px) {
+    .navbar-expand-sm .navbar-collapse {
+        display: -ms-flexbox!important;
+        display: flex!important;
+        -ms-flex-preferred-size: auto;
+        flex-basis: auto;
+    }
+    .nav-link {
+        padding-left: 30px;
+        font-size: 6px;
+        font-family: 'Kanit', sans-serif;
+    }
+    .navbar-nav .nav-link {
+        padding-right: 0;
+        padding-left: 23px;
+        margin-left: -88%;
+    }
+}
+
+@media (min-width: 416px) {
+    .navbar-expand-sm .navbar-collapse {
+        display: -ms-flexbox!important;
+        display: flex!important;
+        -ms-flex-preferred-size: auto;
+        flex-basis: auto;
+    }
+    .nav-link {
+        padding-left: 30px;
+        font-size: 6px;
+        font-family: 'Kanit', sans-serif;
+    }
+    .navbar-nav .nav-link {
+        padding-right: 0;
+        padding-left: 23px;
+        margin-left: -88%;
+    }
+}
+
+@media (min-width: 576px) {
+    .navbar-expand-sm .navbar-nav .nav-link {
+        padding-right: 1.5rem;
+        padding-left: .5rem;
+        font-size: 22px;
+        margin-left: 0%;
+    }
+}
+
 h1 {
     font-size: 50px;
     color: rgb(255, 255, 255);
