--- a/NorseHTML/baldr.css
+++ b/NorseHTML/baldr.css
@@ -77,8 +77,11 @@ b {
     }
     .navbar-nav .nav-link {
         padding-right: 0;
-        padding-left: 23px;
-        margin-left: -88%;
+        padding-left: 14px;
+        font-size: 5px;
+    }
+    .nav-item {
+        width: 30px;
     }
 }
 
@@ -96,8 +99,8 @@ b {
     }
     .navbar-nav .nav-link {
         padding-right: 0;
-        padding-left: 23px;
-        margin-left: -88%;
+        padding-left: 14px;
+        font-size: 5px;
     }
 }
 
@@ -107,6 +110,15 @@ b {
         padding-left: .5rem;
         font-size: 22px;
         margin-left: 0%;
+    }
+    .nav-item {
+        width: 140px;
+    }
+}
+
+@media (min-width: 1920px) {
+    .nav-item {
+        width: 180px;
     }
 }
 
