--- a/EgyptHTML/thoth.css
+++ b/EgyptHTML/thoth.css
@@ -40,8 +40,11 @@ body {
     }
     .navbar-nav .nav-link {
         padding-right: 0;
-        padding-left: 23px;
-        margin-left: -88%;
+        padding-left: 14px;
+        font-size: 5px;
+    }
+    .nav-item {
+        width: 30px;
     }
 }
 
@@ -59,8 +62,8 @@ body {
     }
     .navbar-nav .nav-link {
         padding-right: 0;
-        padding-left: 23px;
-        margin-left: -88%;
+        padding-left: 14px;
+        font-size: 5px;
     }
 }
 
@@ -70,6 +73,15 @@ body {
         padding-left: .5rem;
         font-size: 22px;
         margin-left: 0%;
+    }
+    .nav-item {
+        width: 140px;
+    }
+}
+
+@media (min-width: 1920px) {
+    .nav-item {
+        width: 180px;
     }
 }
 
