--- a/GreekHTML/artemis.css
+++ b/GreekHTML/artemis.css
@@ -25,6 +25,22 @@ body {
 }
 
 @media (min-width: 310px) {
+    .navbar-expand-sm .navbar-nav {
+        -ms-flex-direction: row;
+        flex-direction: row;
+    }
+}
+
+@media (min-width: 310px) {
+    .navbar-expand-sm {
+        -ms-flex-flow: row nowrap;
+        flex-flow: row nowrap;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+    }
+}
+
+@media (min-width: 310px) {
     .navbar-expand-sm .navbar-collapse {
         display: -ms-flexbox!important;
         display: flex!important;
@@ -38,8 +54,11 @@ body {
     }
     .navbar-nav .nav-link {
         padding-right: 0;
-        padding-left: 23px;
-        margin-left: -88%;
+        padding-left: 14px;
+        font-size: 5px;
+    }
+    .nav-item {
+        width: 30px;
     }
 }
 
@@ -57,8 +76,8 @@ body {
     }
     .navbar-nav .nav-link {
         padding-right: 0;
-        padding-left: 23px;
-        margin-left: -88%;
+        padding-left: 14px;
+        font-size: 5px;
     }
 }
 
@@ -68,6 +87,15 @@ body {
         padding-left: .5rem;
         font-size: 22px;
         margin-left: 0%;
+    }
+    .nav-item {
+        width: 140px;
+    }
+}
+
+@media (min-width: 1920px) {
+    .nav-item {
+        width: 180px;
     }
 }
 
